load(":build_defs.bzl", "graph_algo_unit_test")

config_setting(
    name = "emscripten",
    values = {"crosstool_top": "@emsdk//emscripten_toolchain:everything"},
)

cc_library(
    name = "catch-main",
    srcs = ["main.cpp"],
    copts = ["-Icatch2"],
    deps = [
        "//test/cpp/catch2:catch2",
        ":test_util",
    ]
)

cc_library(
    name = "test_util",
    linkstatic = True,
#    visibility = ["//visibility:public"],
    srcs = ["test_util.h"],
    deps = [
    ]
)

graph_algo_unit_test(
    name = "fruchterman",
    srcs = ["fruchterman_test.cpp"],
    deps = [
        "//src/cpp:fruchterman",
    ]
)

# Test suite that runs all the tests.
test_suite(
    name = "all-tests",
    tests = [
#        "backend",
#        "transpose",
#        "argmax",
#        "binary",
#        "basic_math",
#        "conv2d",
#        "split",
#        "concat",
#        "im2col",
    ]
)



